--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>JahyBotv3.0</title>
 </head>
 <body>
-    <h1>hxddd</h1> 
+    <h1>JahyBot</h1> 
+    <nav>
+        <ul>
+             <li><a href="https://dsc.gg/jahybotv3.0">Invitacion</a></li>
+             <li><a href="">Soporte</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
