--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina JahyBot">
+    <meta name="">
     <link rel="stylesheet" href="estilo.css"/>
     <title>JahyBotv3.0</title>
 </head>
 <body>
+
     <h1>JahyBot</h1> 
     <nav>
         <ul>
-             <li><a href="https://dsc.gg/jahybotv3.0">Invitacion</a></li>
+             <li><a href="">Invitacion</a></li>
              <li><a href="">Soporte</a></li>
+             <li><a href="configuracion.html">Configuracion</a></li>
         </ul>
     </nav>
+
 </body>
 </html>
