--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     <h1>JahyBot</h1> 
     <nav>
         <ul>
-             <li><a href="">Invitacion</a></li>
-             <li><a href="">Soporte</a></li>
-             <li><a href="configuracion.html">Configuracion</a></li>
+             <li><a href="https://discord.com/api/oauth2/authorize?client_id=909228493718573126&permissions=1644971949559&scope=bot%20applications.commands">Invitacion</a></li>
+             <li><a href="https://discord.gg/ng9q5d9UyY">Soporte</a></li>
         </ul>
     </nav>
+
+    <div class="redes_sociales">
+        <li class="discord"><a href="discord_creator.html"><img src="img/discord_icon.png" alt=""></a></li>
+    </div>
+
+
 
 </body>
 </html>
