--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pagina JahyBot">
+    <meta name="description" content="Pagina de JahyBot">
     <meta name="">
     <link rel="stylesheet" href="estilo.css"/>
     <title>JahyBotv3.0</title>
@@ -22,6 +22,8 @@
     <div class="redes_sociales">
         <li class="discord"><a href="discord_creator.html"><img src="img/discord_icon.png" alt=""></a></li>
     </div>
+
+    
 
 
 
