--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <li class="discord"><a href="discord_creator.html"><img src="img/discord_icon.png" alt=""></a></li>
     </div>
 
-    
-
-
+<script>
+    console.log("si funca")
+</script>
 
 </body>
 </html>
